[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/seed.png" type="Texture" id=1]
[ext_resource path="res://scripts/seed.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 9.375

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 6.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("seed:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "start"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("seed:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -15 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("seed:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="seed" type="Node2D"]
script = ExtResource( 2 )

[node name="seed" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="seed"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="seed/Area2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/fade_out = SubResource( 3 )
anims/start = SubResource( 1 )

[connection signal="mouse_entered" from="seed/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="seed/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
